.manifests/banana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: banana-service
  labels:
    app: banana
spec:
  selector:
    app: banana
  ports:
    - port: 80
      targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-deployment
  labels:
    app: banana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      containers:
        - name: banana-app
          image: hashicorp/http-echo
          args:
            - "-text=banana"
            - "-listen=:5678"
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: nfs-volume
              mountPath: /data
      volumes:
      - name: nfs-volume
        persistentVolumeClaim:
          claimName: test-claim
